# FeynRules

./: FRPalette.nb  FeynRules.m  FeynRulesPackage.m  NLOCT.m  README.txt  ToolBox.m  UpdateNotes.txt  readme.md
.github/: fetch-upstream.sh  make-commit-msg.sh
.github/workflows/: sync.yml
Core/: ClassDeclarations.m  Decay.m  ExtractVertexTools.m  FRFormat.m  FieldDeclarations.m  FormFactors.m  InSurGe.m  Initialisation.m  Loop.m  MassDiagonalization.m  OptimizedFlavExp.m  OutputRoutines.m  PutIndices.m  Superfields.m  VertexListHandling.m  VertexRoutine.m  WeylFermions.m  goldstino.m
Interfaces/: AspergeInterface.m  CalcHepInterface.m  FeynArtsInterface.m  MadGraphInterface.m  SherpaInterface.m  SuSpectInterface.m  TeXInterface.m  TemplateInterface.m  WhizardOmegaInterface.m
Interfaces/CalcHEP/: MdiagBegin.c  MdiagEnd.c  MdiagExample.c  MdiagMain.c
Interfaces/FeynArts/: LorentzTadpole.gen  feynrules.gen
Interfaces/MadGraph/: rw_para.f  testprog.f
Interfaces/MassDiag/: makefile
Interfaces/MassDiag/inc/: CPar.hpp  MassMatrix.hpp  MassMatrixNF.hpp  MassMatrixTwoMix.hpp  Matrix.hpp  Par.hpp  ParSLHA.hpp  RPar.hpp  SLHABlock.hpp  headers.hpp  tools.hpp
Interfaces/MassDiag/src/: CPar.cpp  MassMatrix.cpp  MassMatrixNF.cpp  MassMatrixTwoMix.cpp  Par.cpp  ParSLHA.cpp  RPar.cpp  SLHABlock.cpp  tools.cpp
Interfaces/UFO/: FAToFR.m  PYCouplingOrders.m  PYDecays.m  PYFormFactors.m  PYIntLog.m  PYIntMain.m  PYIntParameters.m  PYIntParticles.m  PYIntVertices.m  PYNLO.m  PYRestrictions.m  PYSplitStructures.m  PythonForm.m
Interfaces/UFO/Model/: __init__.py
Interfaces/WhizardOmega/: WOMathematicaInterface.m
Interfaces/WhizardOmega/1.92/: omega.feynrules.patch
Interfaces/WhizardOmega/1.93/: omega.feynrules.patch  whizard.feynrules.patch
Interfaces/WhizardOmega/1.96/: omega.feynrules.patch  whizard.feynrules.patch
Interfaces/WhizardOmega/2.0/: Makefile.whizard.in  configure  configure.ac
Interfaces/WhizardOmega/2.2.3/: INSTALL  Makefile.in
Interfaces/WhizardOmega/2.3.0/: Makefile.whizard.in  configure.ac
Interfaces/WhizardOmega/3.0.0/: Makefile.omega.in  Makefile.whizard.in  configure
Interfaces/WhizardOmega/all_19x/: INSTALL  inject
Models/: template.fr
Models/FirstExample/: FirstExample.fr  FirstExample.nb
Models/SM/: SM.fr  SM.nb  SMQCD.nlo  SMQCDreno.nlo  SM_old.fr
Models/SM/SM_NLO/: CT_couplings.py  CT_vertices.py  __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  particles.py  vertices.py
